--- a/templates/partials/tsl-summary-leftpane.hbs
+++ b/templates/partials/tsl-summary-leftpane.hbs
@@ -10,9 +10,9 @@
         <td>
           <div class="tsl-gauge">
             <div class="tsl-current-value">
-              <a><i class="fas fa-minus"></i></a>
+              <a><i class="fas fa-minus speed-change" data-operation="dec"></i></a>
               <input style="width:75px" name="data.vehicle.speed.value" type="number" data-dtype="Number" value="{{data.vehicle.speed.value}}" onfocus="this.select()"/>
-              <a><i class="fas fa-plus"></i></a>
+              <a><i class="fas fa-plus speed-change" data-operation="inc"></i></a>
             </div>
             <div class="gauge" style="width:140px">
               <span class="dial band"></span>
