Adds functionality to inc-dec fuel buttons

--- a/templates/partials/tsl-summary-rightpane.hbs
+++ b/templates/partials/tsl-summary-rightpane.hbs
@@ -10,9 +10,9 @@
         <td colspan="3">
           <div class="tsl-gauge">
             <div class="tsl-current-value">
-              <a><i class="fas fa-minus"></i></a>
+              <a><i class="fas fa-minus hours-change" data-operation="dec"></i></a>
               <input style="width:75px" name="data.vehicle.hoursOfOperation.value" type="number" data-dtype="Number" value="{{data.vehicle.hoursOfOperation.value}}" onfocus="this.select()"/>
-              <a><i class="fas fa-plus"></i></a>
+              <a><i class="fas fa-plus hours-change" data-operation="inc"></i></a>
             </div>
             <div class="gauge" style="width:140px">
               <span class="dial"></span>
