--- a/less/tsl.less
+++ b/less/tsl.less
@@ -276,22 +276,22 @@
       }
     }
 
-    .tsl-cargo-table {
-      input {
-        margin: 0;
+    .tsl-manifest {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 8px;
+      place-items: center;
+
+      .manifest-item {
+        display: grid;
+        grid-template-columns: 1fr auto 20px;
+        column-gap: 8px;
+        place-items: center;
+        text-align: center;
       }
 
-      .cargo-item {
-        display: grid;
-        grid-template-columns: 1.75em 1fr;
-        column-gap: 8px;
-        align-items: center;
-        text-align: start;
-        width: 100%;
-
-        img {
-          height: 1.75em;
-        }
+      .manifest-empty {
+        grid-column: 1 / -1;
       }
     }
 
