--- a/less/tsl.less
+++ b/less/tsl.less
@@ -280,6 +280,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       column-gap: 8px;
+      row-gap: 4px;
       place-items: center;
 
       .manifest-item {
