Adds ram dmg mods to table, St formula is now 2*Br

--- a/templates/partials/tsl-summary-rightpane.hbs
+++ b/templates/partials/tsl-summary-rightpane.hbs
@@ -77,7 +77,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>{{localnum data.vehicle.rammingDamage.base}}</td>
+        <td>
+          {{localnum data.vehicle.rammingDamage.base}}&nbsp;&plus;&nbsp;{{data.vehicle.modifications.values.rammingDamage}}
+        </td>
         <td>
           <input style="width:40px" name="data.vehicle.rammingDamage.temp" type="number" data-dtype="Number" value="{{data.vehicle.rammingDamage.temp}}"/>
         </td>
