Push buttons now fully functional

--- a/templates/chat/push-chat.hbs
+++ b/templates/chat/push-chat.hbs
@@ -1,4 +1,5 @@
-{{log this}}
-<div class="tsl-push-chat-message">
+<div style="text-align:center">
+  <p>{{this.pilot}} attempts to push {{this.vehicle}}'s {{this.component}} past its limits!</p>
+  <p>They must roll under <b>{{this.target}}</b> in order to succeed.</p>
   {{{this.render}}}
 </div>
