Adds ram attack listener and options dialog window

--- a/templates/partials/tsl-summary-rightpane.hbs
+++ b/templates/partials/tsl-summary-rightpane.hbs
@@ -64,7 +64,7 @@
         <td colspan="2">
           <div class="tsl-ramming-damage">
             <span>{{localnum data.vehicle.rammingDamage.total}}</span>
-            <a><i class="fas fa-car-crash"></i></a>
+            <a><i class="fas fa-car-crash ram-attack"></i></a>
           </div>
         </td>
       </tr>
