Ramming damage calculations fully integrated

--- a/templates/chat/ram-dialog.hbs
+++ b/templates/chat/ram-dialog.hbs
@@ -24,4 +24,19 @@
     <label>{{localize "tsl.chat.options.sizeDiff"}}</label>
     <input type="number" data-dtype="Number" name="sizeDiff" value="0"/>
   </div>
+  <div class="form-group">
+    <label>{{localize "tsl.chat.options.userTop"}}</label>
+    <select name="userTop">
+      <option value="open">{{localize "tsl.chat.options.open"}}</option>
+      <option value="hard">{{localize "tsl.chat.options.hard"}}</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label>{{localize "tsl.chat.options.targetTop"}}</label>
+    <select name="targetTop">
+      <option value="none">{{localize "tsl.chat.options.none"}}</option>
+      <option value="open">{{localize "tsl.chat.options.open"}}</option>
+      <option value="hard">{{localize "tsl.chat.options.hard"}}</option>
+    </select>
+  </div>
 </form>
